fixes shape of ear and changes z-index of left ear to -1

--- a/free-code-camp/responsive-web-design/cat-painting/styles.css
+++ b/free-code-camp/responsive-web-design/cat-painting/styles.css
@@ -86,6 +86,16 @@ Move the right ear into position with a position property set to absolute, a top
 Step 29
 As you did for the left ear, rotate the right ear at 45 degrees.
 
+Step 30
+Remove the sharp border of the right ear by setting the border-top-left-radius to 90px and the border-top-right-radius to 10px.
+
+Step 31
+The ears should always be placed above the part of the head it overlaps. You can do this with the z-index property.
+
+z-index is a property you can use to define the order of overlapping HTML elements. Any element with a higher z-index will always be positioned over an element with a lower z-index.
+
+To see z-index in action, set the z-indexproperty of the left ear to -1.
+
 */
 * {
     box-sizing: border-box;
@@ -113,6 +123,7 @@ body {
     position: absolute;
     top: -26px;
     left: -31px;
+    z-index: -1;
     transform: rotate(-45deg);
     border-radius: 90px; 
     border-top-right-radius: 10px;
@@ -126,6 +137,8 @@ body {
     top: -26px;
     left: 163px;
     transform: rotate(45deg);
+    border-top-left-radius: 90px;
+    border-top-right-radius: 10px;
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
     border-bottom: 70px solid #5e5e5e;
